--- a/Application/Backend/view/index.phtml
+++ b/Application/Backend/view/index.phtml
@@ -19,10 +19,15 @@
     <?php } ?>
     <div class="row">
         <div class="col-xs-12 col-md-8">
+            <h1 class="aam-current-subject"></h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12 col-md-8">
             <div class="metabox-holder">
                 <div class="postbox">
                     <h3 class="hndle">
-                        <span><?php echo __('Access Manager', AAM_KEY); ?></span> - <span class="aam-highlight">Alpha Version</span>
+                        <span><?php echo __('Access Manager', AAM_KEY); ?></span> <small><span class="text-warning text-uppercase">Beta Version</span></small>
                         <span class="aam-help-menu" data-target="#access-manager-inside"><i class="icon-help-circled"></i></span>
                     </h3>
                     <div class="inside" id="access-manager-inside">
