--- a/Application/Backend/view/object/post.phtml
+++ b/Application/Backend/view/object/post.phtml
@@ -88,13 +88,13 @@
                         </td>
                     </tr>
                     
-                    <tr>
+                    <tr class="aam-backend-post-access">
                         <td colspan="2" class="aam-table-group">
                             <i class="icon-doc-text-inv"></i> <strong><?php echo __('Backend', AAM_KEY); ?></strong>
                         </td>
                     </tr>
                     
-                    <tr>
+                    <tr class="aam-backend-post-access">
                         <td>
                             <strong class="aam-block"><?php echo __('List', AAM_KEY); ?></strong>
                             <p class="aam-hint">
@@ -109,7 +109,7 @@
                             </div>
                         </td>
                     </tr>
-                    <tr>
+                    <tr class="aam-backend-post-access">
                         <td>
                             <strong class="aam-block"><?php echo __('Edit', AAM_KEY); ?></strong>
                             <p class="aam-hint">
@@ -122,7 +122,7 @@
                             </div>
                         </td>
                     </tr>
-                    <tr>
+                    <tr class="aam-backend-post-access">
                         <td>
                             <strong class="aam-block"><?php echo __('Delete', AAM_KEY); ?></strong>
                             <p class="aam-hint">
