--- a/Application/Backend/view/extension.phtml
+++ b/Application/Backend/view/extension.phtml
@@ -38,7 +38,7 @@
                     </td>
                     <td>
                         <?php if ($dev == AAM_Core_Repository::STATUS_UPDATE) { ?>
-                            <a href="#" class="btn btn-success btn-block aam-update-extension" data-product="AAM Development License"><i class="icon-arrows-cw"></i> <?php echo __('Update', AAM_KEY); ?></a>
+                            <a href="#" class="btn btn-warning btn-block aam-update-extension" data-product="AAM Development License"><i class="icon-arrows-cw"></i> <?php echo __('Update', AAM_KEY); ?></a>
                         <?php } else { ?>
                             <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ZX9RCWU6BTE52" target="_blank" class="btn btn-success btn-block"><i class="icon-basket"></i> <?php echo __('Purchase', AAM_KEY); ?></a>
                         <?php } ?>
@@ -56,7 +56,7 @@
                     </td>
                     <td>
                         <?php if ($plusPackage == AAM_Core_Repository::STATUS_UPDATE) { ?>
-                            <a href="#" class="btn btn-success btn-block aam-update-extension" data-product="AAM Plus Package"><i class="icon-arrows-cw"></i> <?php echo __('Update', AAM_KEY); ?></a>
+                            <a href="#" class="btn btn-warning btn-block aam-update-extension" data-product="AAM Plus Package"><i class="icon-arrows-cw"></i> <?php echo __('Update', AAM_KEY); ?></a>
                         <?php } else { ?>
                             <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=FGAHULDEFZV4U" target="_blank" class="btn btn-success btn-block"><i class="icon-basket"></i> <?php echo __('Purchase', AAM_KEY); ?></a>
                         <?php } ?>
@@ -74,7 +74,7 @@
                     </td>
                     <td>
                         <?php if ($utilities == AAM_Core_Repository::STATUS_UPDATE) { ?>
-                            <a href="#" class="btn btn-success btn-block aam-update-extension" data-product="AAM Utilities"><i class="icon-arrows-cw"></i> <?php echo __('Update', AAM_KEY); ?></a>
+                            <a href="#" class="btn btn-warning btn-block aam-update-extension" data-product="AAM Utilities"><i class="icon-arrows-cw"></i> <?php echo __('Update', AAM_KEY); ?></a>
                         <?php } else { ?>
                             <a href="#" class="btn btn-success btn-block aam-download-extension" data-license="AAMUTILITIES"><i class="icon-download-cloud"></i> <?php echo __('Download', AAM_KEY); ?></a>
                         <?php } ?>
@@ -92,7 +92,7 @@
                     </td>
                     <td>
                         <?php if ($multisite == AAM_Core_Repository::STATUS_UPDATE) { ?>
-                            <a href="#" class="btn btn-success btn-block aam-update-extension" data-product="AAM Multisite"><i class="icon-arrows-cw"></i> <?php echo __('Update', AAM_KEY); ?></a>
+                            <a href="#" class="btn btn-warning btn-block aam-update-extension" data-product="AAM Multisite"><i class="icon-arrows-cw"></i> <?php echo __('Update', AAM_KEY); ?></a>
                         <?php } else { ?>
                             <a href="#" class="btn btn-success btn-block aam-download-extension" data-license="AAMMULTISITE"><i class="icon-download-cloud"></i> <?php echo __('Download', AAM_KEY); ?></a>
                         <?php } ?>
