--- a/Application/Backend/view/object/menu.phtml
+++ b/Application/Backend/view/object/menu.phtml
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-xs-12">
             <p class="aam-info">
-                <?php echo AAM_Backend_Helper::preparePhrase(__('Backend Menu feature does not restrict direct access to the page but rather filters it from the menu. In order to completely restrict access to the desired page, un-check the capability that is assigned to the menu [(the capability is shown right next to the menu title)].', AAM_KEY), 'small'); ?>
+                <?php echo AAM_Backend_Helper::preparePhrase(__('If checked, then menu is filtered. [Please notice]! This does not restrict direct access to the page but rather filters it from the menu. In order to completely restrict access to the desired page, un-check the capability that is assigned to the menu [(the capability is shown right next to the menu title)].', AAM_KEY), 'strong', 'small'); ?>
             </p>
         </div>
     </div>
