--- a/media/css/aam.css
+++ b/media/css/aam.css
@@ -400,6 +400,10 @@ input[type="checkbox"]:focus, input[type="radio"]:focus {
     margin-right: 0;
 }
 
+.aam-outer-top-xs {
+    margin-top: 30px;
+}
+
 .aam-lock {
     position: absolute;
     top: 0;
@@ -615,9 +619,11 @@ input[type="checkbox"]:focus, input[type="radio"]:focus {
     background-color: #F5F5F5;
     padding: 10px;
     position: relative;
-    border-radius: 4px;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
+}
+
+.aam-numeric-list {
+    list-style: decimal;
+    padding-left: 15px;
 }
 
 .aam-notification-icon {
